# rs-serde

./: COVERAGE.md  COVERAGE.zh_CN.md  Cargo.toml  README.md  README.zh_CN.md  rustfmt.toml
src/: lib.rs
src/serde/: duration_millis.rs  duration_with_unit.rs  mod.rs
tests/: serde_tests.rs
tests/serde/: duration_millis_tests.rs  duration_with_unit_tests.rs  mod.rs
