[package]
name = "qubit-serde"
version = "0.2.4"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-serde"
description = "Reusable serde adapters and helper functions for Rust applications"
homepage = "https://github.com/qubit-ltd/rs-serde"
documentation = "https://docs.rs/qubit-serde"
readme = "README.md"
keywords = ["serde", "serialization", "utility", "qubit"]
categories = ["encoding", "development-tools", "rust-patterns"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_serde"
doctest = true
test = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

qubit-datatype = "0.2"
